--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Max Noll
-description: Promotionsstudent im Völkerrecht<br/>Berlin/Göttingen
+description: PhD-Student in Public International Law<br/>Berlin/Göttingen
 logo: 7fAWb4Hi_400x400.jpeg
