--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-minimal
 title: Max Noll
 description: PhD-Student in Public International Law<br/>Berlin/Göttingen
 logo: 7fAWb4Hi_400x400.jpeg
+lang: de
