--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
-title: Max Noll
-description: PhD-Student in Public International Law<br/>Berlin/Göttingen
+title: Max Noll Rechtswissenschaften Law Berlin Göttingen
+description: Doktorand im Völkerrecht - Göttingen/Berlin - PhD-Student in Public International Law
 logo: 7fAWb4Hi_400x400.jpeg
+url: www.maxnoll.eu
 lang: de
