--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Max Noll Rechtswissenschaften Jura Law Berlin Göttingen
-description: Doktorand im Völkerrecht - Göttingen/Berlin - PhD-Student in Public International Law
+title: Max Noll - Doktorand im Völkerrecht - Jura - Rechtswissenschaften
+description: Max Noll - Doktorand im Völkerrecht - PhD-Student in Public International Law - Göttingen/Berlin
 logo: 7fAWb4Hi_400x400.jpeg
 lang: de
