--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Max Noll - Doktorand im Völkerrecht - Jura - Rechtswissenschaften
-logo: 7fAWb4Hi_400x400.jpeg
+logo: max_noll.jpg
 lang: de
