--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Max Noll - Doktorand im Völkerrecht - Jura - Rechtswissenschaften
-logo: max_noll_profile.jpg
+logo: max_noll_profile_small.jpg
 lang: de
